# conversational-factory

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml
docs/: contracts-roadmap.md  product-thesis.md  repo-map.md  system-architecture.md  workstream-map.md
examples/: README.md
examples/contracts/: correlation-event.sample.json  current-state-snapshot.sample.json  gateway-request.sample.json  gateway-response.sample.json  historian-event.sample.json  observation.sample.json  record-filter.sample.json  semantic-record.sample.json  tool-catalog.sample.json
original-concepts/: August 7, 2025 - Drive - Complete Product & Hardware Strategy.txt  August 7, 2025 - Drive - Semantic DHCP_ Zero-Touch Industrial Configuration....txt  HASHES.sha256  July 30, 2025 - Drive - Executive Strategy_ The OT Context Platform.txt
schemas/: README.md
schemas/assets/v1/: asset-reference.schema.json  observation.schema.json  semantic-record.schema.json
schemas/common/v1/: identity-surfaces.schema.json
schemas/events/v1/: correlation-event.schema.json  historian-event.schema.json
schemas/gateway/v1/: gateway-request.schema.json  gateway-response.schema.json  tool-catalog.schema.json
schemas/query-plane/v1/: query-records-response.schema.json  record-filter.schema.json  resolve-target.schema.json
schemas/state/v1/: current-state-snapshot.schema.json
schemas/system/v1/: sync-status.schema.json
services/: README.md
services/conversational-gateway/: Cargo.toml  README.md
services/conversational-gateway/src/: catalog.rs  intent.rs  main.rs  routes.rs  summary.rs
services/discovery/: Cargo.toml
services/discovery/src/: arp.rs  main.rs  observation.rs  probe.rs  sink.rs
services/query-plane/: Cargo.toml  README.md
services/query-plane/src/: main.rs  routes.rs  sample.rs  upstream.rs
services/shared/: Cargo.toml
services/shared/src/: assets.rs  events.rs  gateway.rs  identity.rs  lib.rs  query.rs  state.rs  system.rs
