[package]
name = "discovery"
description = "Active subnet discovery emitting observations to the semantic registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cf-shared = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dns-lookup = { workspace = true }
ipnet = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

# FUTURE — wire upstream Rust crates once we have packet capture or pcap input.
# Both require additional plumbing (raw sockets / SPAN / pcap bytes) before
# they earn their keep here.
#
# marlinspike-dpi = { path = "../../../marlinspike-dpi" }
# fm-capture     = { path = "../../../fathomips-rust/crates/fm-capture" }
# fm-wire        = { path = "../../../fathomips-rust/crates/fm-wire" }
