[package]
name = "query-plane"
description = "Read-only segmented query plane over the semantic registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cf-shared = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
